examples/Errors/203.zsrc
{
    "0::a # FUNC:RE": {
        "name": "a",
        "base": "#",
        "function": "FUNC",
        "paramsList": [
            "RE"
        ]
    }
}